// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Category renders correctly when there are courses 1`] = `
<Categorystyles__CategoryWrapper>
  <Categorystyles__CategoryTitleHolder>
    <Categorystyles__CategoryIcon />
    <Categorystyles__CategoryTitle>
      Test
    </Categorystyles__CategoryTitle>
    <Categorystyles__ViewAll>
      <Categorystyles__ViewAllLink>
        <Link
          replace={false}
          to="/training/categories/1"
        >
          <FormattedMessage
            id="viewAllCourses"
            values={Object {}}
          />
        </Link>
      </Categorystyles__ViewAllLink>
    </Categorystyles__ViewAll>
  </Categorystyles__CategoryTitleHolder>
  <Categorystyles__List>
    <withRouter(CategoryCourse)
      course={
        Object {
          "id": 1,
        }
      }
      key="1"
    />
  </Categorystyles__List>
</Categorystyles__CategoryWrapper>
`;

exports[`Category renders correctly when there are sub categories 1`] = `
<Categorystyles__CategoryWrapper>
  <Categorystyles__CategoryTitleHolder>
    <Categorystyles__CategoryIcon />
    <Categorystyles__CategoryTitle>
      Test
    </Categorystyles__CategoryTitle>
  </Categorystyles__CategoryTitleHolder>
  <Categorystyles__List>
    <SubCategory
      category={
        Object {
          "id": 1,
        }
      }
      key="1"
    />
  </Categorystyles__List>
</Categorystyles__CategoryWrapper>
`;
